# obs-mod-toys

./: Cargo.toml  README.md
canvas/: package-lock.json  package.json
canvas/src/: App.svelte
canvas/src/lib/: Canvas.svelte  CanvasActions.svelte  FilePicker.svelte  ImageObjectComponent.svelte  ObjectsList.svelte  PositionedObject.svelte  TextObjectComponent.svelte  canvas-store.ts
src/: actor.rs  client.rs  main.rs  object.rs
