[package]
name = "obs-mod-toys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["ws"] }
dashmap = "6.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.2"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
